<resources>
    <string name="version">VERSION </string>
    <string name="beta"> BETA</string>
    <string name="app_name">Notify</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="show_notification">Show Notification</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Settings Screen Preferences -->
    <string name="theme_title">Theme</string>
    <string name="theme_dialog_title">Choose Theme</string>

    <string name="attach_pin_title">Attach Pin</string>
    <string name="attach_pin_description">When enabled pin will be attached to notes by default</string>

    <string name="temporary_notes_title">Temporary Notes</string>
    <string name="temporary_notes_dialog_title">Choose Time</string>
    <string name="temporary_notes_description">Clear unpinned notifications after selected time</string>

    <string name="clear_title">Clear</string>
    <string name="clear_description">Clear all ongoing notifications</string>

    <string name="email_title">Email</string>
    <string name="email_description">adityakhot6838@gmail.com</string>

    <string name="donate_title">Donate</string>
    <string name="donate_description">Support the development</string>

    <string name="feedback_title">Feedback</string>
    <string name="feedback_description">Share your experience</string>

    <string name="about_app_title">About Notify</string>
    <string name="about_app_description">Learn more about this app</string>

    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="privacy_policy_description">khot-aditya.github.io</string>

    <string name="help_title">Help</string>
    <string name="heLp_description">Contact developer for questions</string>
    <string name="report_bug">Report bug</string>
    <string name="sort">Sort</string>
    <string name="collapsed_view_title">Collapsed View</string>
    <string name="collapsed_view_description">Enable to collapse big notifications</string>
    <string name="groups_title">Groups</string>
    <string name="groups_description">Group notifications with similar category</string>
    <string name="empty_field_error">Empty Field</string>
    <string name="date_time">9:30 am • Tue, 7 Dec</string>


    <!--    Editor Screen Preferences-->
    <string name="search_as_query">Search as query</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="send_email">Send email</string>
    <string name="send_message">Send text message</string>
    <string name="make_a_call">Make a phone call</string>
    <string name="add_to_contact">Add to contact</string>
    <string name="share">Share</string>

</resources>