<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="App Settings">

        <ListPreference
            android:title="@string/theme_title"
            app:defaultValue="follow_system"
            app:dialogTitle="@string/theme_dialog_title"
            app:entries="@array/theme_title"
            app:entryValues="@array/theme_values"
            app:icon="@drawable/ic_theme"
            app:key="@string/theme_title"
            app:negativeButtonText=""
            app:positiveButtonText=""
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:summary="@string/attach_pin_description"
            app:defaultValue="true"
            app:icon="@drawable/ic_pin"
            app:key="@string/attach_pin_title"
            app:title="@string/attach_pin_title" />

        <ListPreference
            android:title="@string/temporary_notes_title"
            app:defaultValue="86400000"
            app:dialogTitle="@string/temporary_notes_dialog_title"
            app:entries="@array/temporary_notes_title"
            app:entryValues="@array/temporary_notes_values"
            app:icon="@drawable/ic_temporary_notes"
            app:key="@string/temporary_notes_title"
            app:negativeButtonText=""
            app:positiveButtonText=""
            app:summary="@string/temporary_notes_description"
            app:useSimpleSummaryProvider="false" />


<!--        <SwitchPreferenceCompat-->
<!--            android:summary="@string/groups_description"-->
<!--            app:defaultValue="false"-->
<!--            app:icon="@drawable/ic_group"-->
<!--            app:key="@string/groups_title"-->
<!--            app:title="@string/groups_title" />-->


        <SwitchPreferenceCompat
            android:summary="@string/collapsed_view_description"
            app:defaultValue="true"
            app:icon="@drawable/ic_collapse"
            app:key="@string/collapsed_view_title"
            app:title="@string/collapsed_view_title" />

        <Preference
            android:key="@string/clear_title"
            android:summary="@string/clear_description"
            android:title="@string/clear_title"
            app:icon="@drawable/ic_clear_all" />

    </PreferenceCategory>


    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title=" Contact Developer">

        <!--        <Preference-->
        <!--            android:key="Telegram"-->
        <!--            android:summary="This is a cool button"-->
        <!--            app:icon="@drawable/ic_telegram"-->
        <!--            android:title="Telegram" />-->

        <!--        <Preference-->
        <!--            android:key="Github"-->
        <!--            android:summary="https://github.com/adityakhot6838"-->
        <!--            android:title="Github"-->
        <!--            app:icon="@drawable/ic_github" />-->

        <Preference
            android:key="@string/email_title"
            android:summary="@string/email_description"
            android:title="@string/email_title"
            app:icon="@drawable/ic_email" />

        <Preference
            android:key="@string/donate_title"
            android:summary="@string/donate_description"
            android:title="@string/donate_title"
            app:icon="@drawable/ic_donate" />

        <Preference
            android:key="@string/feedback_title"
            android:summary="@string/feedback_description"
            android:title="@string/feedback_title"
            app:icon="@drawable/ic_feedback" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="About App">
        <!--        <Preference-->
        <!--            android:key="Changelog"-->
        <!--            android:summary="This is a cool button"-->
        <!--            android:title="Changelog"-->
        <!--            app:icon="@drawable/ic_change_log" />-->

        <Preference
            android:key="@string/privacy_policy_title"
            android:summary="@string/privacy_policy_description"
            android:title="@string/privacy_policy_title"
            app:icon="@drawable/ic_privacy_policy" />


        <Preference
            android:key="@string/about_app_title"
            android:summary="@string/about_app_description"
            android:title="@string/about_app_title"
            app:icon="@drawable/ic_about_app" />


        <!--        <Preference-->
        <!--            android:key="@string/help_title"-->
        <!--            android:summary="@string/heLp_description"-->
        <!--            android:title="@string/help_title"-->
        <!--            app:icon="@drawable/ic_help" />-->
    </PreferenceCategory>


    <Preference app:layout="@layout/layout_version" />
</PreferenceScreen>