<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory>

        <Preference
            android:title="@string/search_as_query"
            app:icon="@drawable/ic_search_as_query"
            app:key="@string/search_as_query" />
        <Preference
            android:title="@string/copy_to_clipboard"
            app:icon="@drawable/ic_copy_2"
            app:key="@string/copy_to_clipboard" />
        <Preference
            android:title="@string/make_a_call"
            app:icon="@drawable/ic_make_call"
            app:key="@string/make_a_call" />
        <Preference
            android:title="@string/add_to_contact"
            app:icon="@drawable/ic_add_to_contact"
            app:key="@string/add_to_contact" />
        <Preference
            android:title="@string/send_message"
            app:icon="@drawable/ic_send_text_message"
            app:key="@string/send_message" />
        <Preference
            android:title="@string/send_email"
            app:icon="@drawable/ic_send_email"
            app:key="@string/send_email" />
        <Preference
            android:title="@string/share"
            app:icon="@drawable/ic_share_2"
            app:key="@string/share" />

    </PreferenceCategory>
</PreferenceScreen>